<resources>
    <string name="app_name">Gym Helper</string>
    <string name="gym_helper">Gym Helper</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="about_app_images_cd">about app images</string>
    <string name="login_title">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_a_password">Forgot a password?</string>
    <string name="confirm">Confirm</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="test">test</string>
    <string name="home">Home</string>
    <string name="training">Training</string>
    <string name="stats">Stats</string>
    <string name="float_button">Float Button</string>
    <string name="name">Name</string>
    <string name="body">Body</string>
    <string name="personal_best">Personal Best</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="body_icon">body icon</string>
    <string name="chevron_right">chevron right</string>
    <string name="personal_best_icon">personal best icon</string>
    <string name="exercises_icon">exercises icon</string>
    <string name="settings_icon">settings icon</string>
    <string name="add_personal_best">Add personal best</string>
    <string name="add_exercise_set">Add exercise set</string>
    <string name="add_training">Add training</string>
</resources>