<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_title"
        style="@style/Theme.GymHelper.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/login_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Theme.GymHelper.TextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_field"
            android:hint="@string/e_mail"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableTint="@color/text_field_start_icon_selector"
            android:inputType="textEmailAddress"
            android:drawablePadding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Theme.GymHelper.TextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_field"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableTint="@color/text_field_start_icon_selector"
            android:drawablePadding="16dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_a_password"
        style="@style/Theme.GymHelper.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_a_password"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        style="@style/Theme.GymHelper.Button"
        android:backgroundTint="@null"
        android:background="@drawable/button_gradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_a_password"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>