<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.GymHelper">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="@font/ubuntu_light"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:navigationIconTint="@color/primary"
        app:title="My Profile"
        app:titleTextAppearance="@style/Theme.GymHelper.Toolbar"
        app:titleTextColor="@color/primary" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_upload"
        android:transitionName="profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/name"
        android:textColor="@color/name_color"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/name"
        android:textColor="@color/text_field_grey"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_name" />

    <LinearLayout
        android:id="@+id/profile_buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/profile_last_name"
        app:layout_constraintTop_toBottomOf="@id/profile_last_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/half_rounded_bottom_app_bar"
            android:elevation="2dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/body_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/body_icon"
                android:src="@drawable/ic_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/body"
                android:textColor="@color/primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/body_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/body_chevron_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chevron_right"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/personal_best_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/half_rounded_bottom_app_bar"
            android:elevation="2dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/personal_best_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/personal_best_icon"
                android:src="@drawable/ic_trophy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_personal_best_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/personal_best"
                android:textColor="@color/primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/personal_best_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/personal_best_chevron_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chevron_right"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/exercises_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/half_rounded_bottom_app_bar"
            android:elevation="2dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/exercises_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/exercises_icon"
                android:src="@drawable/ic_exercises"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_exercises_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/exercises"
                android:textColor="@color/primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/exercises_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/exercises_chevron_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chevron_right"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/half_rounded_bottom_app_bar"
            android:elevation="2dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings_icon"
                android:src="@drawable/ic_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/settings"
                android:textColor="@color/primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/settings_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/settings_chevron_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chevron_right"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        style="@style/Theme.GymHelper.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_gradient"
        android:backgroundTint="@null"
        android:foreground="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
        android:paddingHorizontal="48dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/profile_buttons_container" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_rotating_gradient"
        app:indicatorSize="50dp"
        android:visibility="gone"
        android:background="@drawable/rounded_progress_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>