<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Theme.GymHelper.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="@font/ubuntu_family"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:navigationIconTint="@color/onPrimary"
        app:title="Create an user"
        app:titleTextAppearance="@style/Theme.GymHelper.Toolbar"
        app:titleTextColor="@color/onPrimary" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sign_up_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="174dp"
                android:layout_height="174dp"
                android:layout_marginTop="34dp"
                android:src="@color/surface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/add_a_photo_text"
                style="@style/Theme.GymHelper.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_photo"
                android:textColor="@color/onSurface"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_input_layout"
                style="@style/Theme.GymHelper.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/text_field_start_icon_selector"
                    android:hint="@string/first_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_input_layout"
                style="@style/Theme.GymHelper.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/first_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/text_field_start_icon_selector"
                    android:hint="@string/last_name"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <EditText-->
<!--                android:id="@+id/age_text_field"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:background="@drawable/circle_edit_text"-->
<!--                android:fontFamily="@font/ubuntu_family"-->
<!--                android:hint="@string/age"-->
<!--                android:inputType="numberDecimal"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/onPrimary"-->
<!--                android:textColorHint="@color/text_color_hint"-->
<!--                app:layout_constraintEnd_toStartOf="@id/height_text_field"-->
<!--                app:layout_constraintStart_toStartOf="@id/last_name_input_layout"-->
<!--                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout"-->
<!--                android:importantForAutofill="no" />-->

<!--            <EditText-->
<!--                android:id="@+id/height_text_field"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:background="@drawable/circle_edit_text"-->
<!--                android:fontFamily="@font/ubuntu_family"-->
<!--                android:hint="@string/height"-->
<!--                android:inputType="numberDecimal"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/onPrimary"-->
<!--                android:textColorHint="@color/text_color_hint"-->
<!--                app:layout_constraintEnd_toStartOf="@id/weight_text_field"-->
<!--                app:layout_constraintStart_toEndOf="@id/age_text_field"-->
<!--                app:layout_constraintTop_toTopOf="@id/age_text_field"-->
<!--                android:importantForAutofill="no" />-->

<!--            <EditText-->
<!--                android:id="@+id/weight_text_field"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:background="@drawable/circle_edit_text"-->
<!--                android:fontFamily="@font/ubuntu_family"-->
<!--                android:hint="@string/weight"-->
<!--                android:inputType="numberDecimal"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/onPrimary"-->
<!--                android:textColorHint="@color/text_color_hint"-->
<!--                app:layout_constraintEnd_toEndOf="@id/last_name_input_layout"-->
<!--                app:layout_constraintStart_toEndOf="@id/height_text_field"-->
<!--                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout"-->
<!--                app:layout_constraintTop_toTopOf="@id/age_text_field"-->
<!--                android:importantForAutofill="no" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Theme.GymHelper.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/text_field_start_icon_selector"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Theme.GymHelper.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/text_field_start_icon_selector"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_input_layout"
                style="@style/Theme.GymHelper.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/text_field_start_icon_selector"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_button"
                style="@style/Theme.GymHelper.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_gradient"
                android:backgroundTint="@null"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>